--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "keywords": ["freshdesk", "customer service", "support", "help desk", "api", "laravel"],
     "type": "laravel-package",
     "require": {
-        "mpclarkson/freshdesk-php-sdk": "0.3.*",
-        "illuminate/support": "~5.1"
+        "supover/freshdesk-php-sdk": "*",
+        "illuminate/support": "~5.1|^6.0|^7.0|^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4",
