--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,14 @@
     "homepage": "https://github.com/mpclarkson/freshdesk-laravel",
     "keywords": ["freshdesk", "customer service", "support", "help desk", "api", "laravel"],
     "type": "laravel-package",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/Webness-Studio/freshdesk-php-sdk"
+        }
+    ],
     "require": {
-        "supover/freshdesk-php-sdk": "*",
+        "mpclarkson/freshdesk-php-sdk": "dev-master"
         "illuminate/support": "~5.1|^6.0|^7.0|^8.0|^9.0|^10.0"
     },
     "require-dev": {
