--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "mpclarkson/freshdesk-php-sdk": "dev-master"
+        "mpclarkson/freshdesk-php-sdk": "dev-master",
         "illuminate/support": "~5.1|^6.0|^7.0|^8.0|^9.0|^10.0"
     },
     "require-dev": {
